Add new command entries to commandes.html

--- a/commandes.html
+++ b/commandes.html
@@ -43,16 +43,71 @@
               <th>Trigger</th>
               <th>Description</th>
             </tr>
+
+            <!-- COMMANDES PRINCIPALES -->
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>Configuration</td>
+              <td>/configuration</td>
+              <td>Configurer le système principal de tickets</td>
             </tr>
             <tr>
-              <td></td>
-              <td></td>
-              <td></td>
+              <td>Notes configuration</td>
+              <td>/notes-configuration</td>
+              <td>Activer ou désactiver le système de notation</td>
             </tr>
+            <tr>
+              <td>Ticket Panel</td>
+              <td>/ticketpanel</td>
+              <td>Envoyer le panneau multi-réactions</td>
+            </tr>
+            <tr>
+              <td>Ticket Configuration ADD</td>
+              <td>/ticketconfig add</td>
+              <td>Ajouter un élément au multi-panel</td>
+            </tr>
+            <tr>
+              <td>Ticket Configuration REMOVE</td>
+              <td>/ticketconfig remove</td>
+              <td>Retirer un élément au multi-panel</td>
+            </tr>
+            <tr>
+              <td>Ajouter</td>
+              <td>/add</td>
+              <td>Ajouter un membre au ticket</td>
+            </tr>
+            <tr>
+              <td>Retirer</td>
+              <td>/remove</td>
+              <td>Retirer un membre au ticket</td>
+            </tr>
+            <tr>
+              <td>Support Info</td>
+              <td>/support-info</td>
+              <td>Ajouter des règles au serveur</td>
+            </tr>
+            <tr>
+              <td>Serveur Info</td>
+              <td>/serverinfo</td>
+              <td>Afficher toutes les informations du serveur</td>
+            </tr>
+            <tr>
+              <td>Utilisateur informations</td>
+              <td>/userinfo</td>
+              <td>Afficher toutes les informations d'un utilisateur</td>
+            </tr>
+            <tr>
+              <td>Note</td>
+              <td>/note</td>
+              <td>Attribuer une note au serveur support TicketTac</td>
+            </tr>
+            <tr>
+              <td>Découvrez bien plus</td>
+              <td>en</td>
+              <td>utilisant TicketTac !</td>
+            </tr>
+
+
+
           </table>
         </div>
       </section>
