Update command descriptions in commandes.html

--- a/commandes.html
+++ b/commandes.html
@@ -101,9 +101,9 @@
               <td>Attribuer une note au serveur support TicketTac</td>
             </tr>
             <tr>
-              <td>Découvrez bien plus</td>
-              <td>en</td>
-              <td>utilisant TicketTac !</td>
+              <td></td>
+              <td>Et plus de 10 commandes supplémentaires à découvrir</td>
+              <td></td>
             </tr>
 
 
