Update Discord links in support.html

--- a/support.html
+++ b/support.html
@@ -41,7 +41,7 @@
             <h3>💬 Serveur support</h3>
             <p>Rejoignez le serveur officiel pour poser vos questions, signaler un bug ou proposer une idée.</p>
             <div class="pills">
-              <a class="pill" href="https://discord.gg/TON_SERVEUR" target="_blank">Rejoindre le serveur support</a>
+              <a class="pill" href="https://discord.gg/GtjfJAXJmy" target="_blank">Rejoindre le serveur support</a>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
             <h3>🎟️ Ajouter TicketTac</h3>
             <p>Invitez TicketTac sur votre serveur en quelques secondes.</p>
             <div class="pills">
-              <a class="pill" href="https://discord.com/oauth2/authorize?client_id=TON_ID&scope=bot&permissions=8" target="_blank">Ajouter le bot</a>
+              <a class="pill" href="https://discord.com/oauth2/authorize?client_id=1463167433857830922&permissions=8&scope=bot%20applications.commands" target="_blank">Ajouter le bot</a>
             </div>
           </div>
         </div>
