Update text and links in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo-badge">🎟️</div>
         <div>
           <div class="logo-text-main">TicketTac</div>
-          <div class="logo-text-sub">Gestion de tickets ultra propre</div>
+          <div class="logo-text-sub">Gestionnaire de vos tickets</div>
         </div>
       </div>
       <div class="nav-links">
@@ -43,10 +43,10 @@
             Un système de tickets lisible, organisé, avec logs, permissions intelligentes et une expérience fluide pour vos membres.
           </p>
           <div class="hero-actions">
-            <a class="btn btn-primary" href="https://discord.com/oauth2/authorize?client_id=TON_ID&scope=bot&permissions=8" target="_blank">
+            <a class="btn btn-primary" href="https://discord.com/oauth2/authorize?client_id=1463167433857830922&permissions=8&scope=bot%20applications.commands" target="_blank">
               🚀 Ajouter TicketTac
             </a>
-            <a class="btn btn-ghost" href="https://discord.gg/TON_SERVEUR" target="_blank">
+            <a class="btn btn-ghost" href="https://discord.gg/GtjfJAXJmy" target="_blank">
               💬 Rejoindre le serveur support
             </a>
           </div>
@@ -67,11 +67,11 @@
           <div class="hero-panel-body">
             <div class="hero-row">
               <span class="hero-label">Serveurs actifs</span>
-              <span class="hero-value">+120</span>
+              <span class="hero-value">+25</span>
             </div>
             <div class="hero-row">
               <span class="hero-label">Tickets gérés</span>
-              <span class="hero-value">+32 000</span>
+              <span class="hero-value">+524</span>
             </div>
             <div class="hero-row">
               <span class="hero-label">Temps moyen de création</span>
@@ -106,7 +106,7 @@
             <div class="pills">
               <span class="pill">Logs centralisés</span>
               <span class="pill">Historique staff</span>
-              <span class="pill">Audit simple</span>
+              <span class="pill">Transcript complet</span>
             </div>
           </div>
           <div class="card">
