Update online status text to uppercase

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="vote.html">Voter</a>
       </div>
       <div class="nav-cta">
-        <div class="nav-pill">🟢 En ligne 24/7</div>
+        <div class="nav-pill">🟢 EN LIGNE</div>
       </div>
     </div>
   </header>
